<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailsActivity"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/detailsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.youtube.player.YouTubePlayerView
                android:id="@+id/youtubePlayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowTrailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/youtubePlayer"
                android:background="@color/backgroundBelowTrailer"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">

                <TextView
                    android:id="@+id/labelDetailsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/labelDetailsOriginalTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/labelDetailsTitle"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="12sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/labelDetailsReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/labelDetailsOriginalTitle"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/imageDetailsRuntime"
                    android:layout_width="17sp"
                    android:layout_height="17sp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/labelDetailsReleaseDate"
                    android:contentDescription="@string/movieListPosterContentDescription"
                    android:src="@drawable/duration"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/labelDetailsRuntime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/labelDetailsReleaseDate"
                    android:layout_marginStart="5sp"
                    android:layout_toEndOf="@+id/imageDetailsRuntime"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/imageDetailsGenres"
                    android:layout_width="17sp"
                    android:layout_height="17sp"
                    android:layout_below="@+id/labelDetailsReleaseDate"
                    android:layout_marginStart="7sp"
                    android:layout_toEndOf="@+id/labelDetailsRuntime"
                    android:contentDescription="@string/movieListPosterContentDescription"
                    android:src="@drawable/genres" />

                <TextView
                    android:id="@+id/labelDetailsGenres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/labelDetailsReleaseDate"
                    android:layout_marginStart="5sp"
                    android:layout_toEndOf="@+id/imageDetailsGenres"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutBelowTrailer"
                android:background="@drawable/border"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">

                <ImageView
                    android:id="@+id/imageDetailsPoster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/movieListPosterContentDescription"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/labelDetailsOverview"
                    android:layout_width="match_parent"
                    android:layout_height="131sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="15sp"
                    android:layout_toEndOf="@+id/imageDetailsPoster"
                    android:textColor="@color/primaryTextColor" />

                <Button
                    android:id="@+id/buttonAddToWatchlist"
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:layout_below="@+id/labelDetailsOverview"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="5sp"
                    android:layout_toEndOf="@+id/imageDetailsPoster"
                    android:text="@string/buttonAddToWatchlist"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowPoster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutBelowTitle"
                android:background="@drawable/border"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/imageDetailsRating"
                            android:layout_width="18sp"
                            android:layout_height="18sp"
                            android:contentDescription="@string/movieListPosterContentDescription"
                            android:src="@drawable/rating_full_yellow" />

                        <TextView
                            android:id="@+id/labelDetailsRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7sp"
                            android:layout_toEndOf="@+id/imageDetailsRating"
                            android:textColor="@color/secondaryTextColor" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <ImageView
                            android:id="@+id/imageDetailsRateThis"
                            android:layout_width="18sp"
                            android:layout_height="18sp"
                            android:contentDescription="@string/movieListPosterContentDescription"
                            android:src="@drawable/rating_empty" />

                        <TextView
                            android:id="@+id/labelDetailsRateThis"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="7sp"
                            android:layout_toEndOf="@+id/imageDetailsRateThis"
                            android:text="@string/rateThis"
                            android:textColor="@color/secondaryTextColor" />

                    </RelativeLayout>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutBelowPoster"
                android:background="@drawable/border"
                android:paddingBottom="7sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">

                <TextView
                    android:id="@+id/labelDetailsCast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/labelCast"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp" />

                <HorizontalScrollView
                    android:id="@+id/horizontalCastView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/labelDetailsCast"
                    android:layout_marginTop="8sp">

                    <LinearLayout
                        android:id="@+id/horizontalLinearCastView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    </LinearLayout>


                </HorizontalScrollView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowCast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutBelowRating"
                android:background="@drawable/border"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">


                <TextView
                    android:id="@+id/labelDirector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/director"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/labelDetailsDirectors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/labelDirector"
                    android:layout_marginStart="5sp"
                    android:textSize="13sp"
                    android:textColor="@color/secondaryTextColor" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutBelowCast"
                android:background="@drawable/border"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">


                <TextView
                    android:id="@+id/labelProducer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/producer"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/labelDetailsProducers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/labelProducer"
                    android:layout_marginStart="5sp"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="13sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowProducer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutBelowDirector"
                android:background="@drawable/border"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">

                <TextView
                    android:id="@+id/labelDetailsImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:text="@string/labelImages"/>

                <HorizontalScrollView
                    android:id="@+id/horizontalImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8sp"
                    android:layout_below="@+id/labelDetailsImages">

                    <LinearLayout
                        android:id="@+id/horizontalLinearImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal" >

                    </LinearLayout>


                </HorizontalScrollView>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayoutBelowImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayoutBelowProducer"
                android:background="@drawable/border"
                android:paddingBottom="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="10sp">


                <TextView
                    android:id="@+id/labelBudget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/budget"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="13sp"/>

                <TextView
                    android:id="@+id/labelDetailsBudget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_toEndOf="@+id/labelBudget"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="13sp" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>